--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -154,4 +154,5 @@ section{
 .bg-svg{
   background-image: url("../assets/images/backgroundHero.svg");
   background-position: center;
+  background-repeat: no-repeat;
 }
