I made modifications to the global.css, added onKeyDown event listeners to the filtermodal and changeresumemodal.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,11 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-@plugin "tailwindcss-animate";
-
-@custom-variant dark (&:is(.dark *));
-@plugin "tailwindcss-animate";
+@plugin 'tailwindcss-animate';
 
 @custom-variant dark (&:is(.dark *));
+.dark * {
+  color-scheme: dark;
+}
 
 @theme inline {
   --color-background: var(--background);
